--- a/Dockerfile.minimal
+++ b/Dockerfile.minimal
@@ -1,6 +1,6 @@
-FROM alpine:3.2
+FROM alpine:3.4
 
-RUN apk add --update ca-certificates
+RUN apk add --update curl ca-certificates
 RUN apk add xmlsec --update-cache --repository http://dl-3.alpinelinux.org/alpine/edge/testing/
 RUN ln -s libxmlsec1-openssl.so.1 /usr/lib/libxmlsec1-openssl.so
 
@@ -11,8 +11,12 @@ ENV BUILD_DIR=/app/build
 ENV NODE_ENV=production
 
 RUN mkdir /app
-ADD main /app/
-ADD build /app/build/
+COPY main /app/
+COPY build /app/build/
+
+# Install kubectl
+RUN curl -L https://storage.googleapis.com/kubernetes-release/release/v1.2.6/bin/linux/amd64/kubectl -o /usr/local/bin/kubectl \
+ && chmod +x /usr/local/bin/kubectl
 
 EXPOSE 80
 ENTRYPOINT ["/app/main"]
