--- a/Dockerfile.minimal
+++ b/Dockerfile.minimal
@@ -1,6 +1,6 @@
 FROM alpine:3.4
 
-RUN apk add --update curl ca-certificates
+RUN apk add --update curl ca-certificates && update-ca-certificates
 RUN apk add xmlsec --update-cache --repository http://dl-3.alpinelinux.org/alpine/edge/testing/
 RUN ln -s libxmlsec1-openssl.so.1 /usr/lib/libxmlsec1-openssl.so
 
