--- a/public/package.json
+++ b/public/package.json
@@ -30,9 +30,11 @@
     "moment-duration-format": "1.3.0",
     "node-notifier": "4.2.1",
     "postcss-loader": "0.6.0",
-    "react": "0.13.3",
-    "react-bootstrap": "0.26.4",
-    "react-router": "0.13.4",
+    "react": "0.14.8",
+    "react-dom": "0.14.8",
+    "react-bootstrap": "0.30.2",
+    "react-bootstrap-typeahead": "0.8.4",
+    "react-router": "0.13.5",
     "run-sequence": "1.0.2",
     "style-loader": "0.12.4",
     "superagent": "1.4.0",
