--- a/docs/examples/simple/secret.yaml
+++ b/docs/examples/simple/secret.yaml
@@ -7,8 +7,8 @@ metadata:
 data:
   # github
   github-token: base64encodedsecret
-  # quay
-  quay-token: base64encodedsecret
+  # docker registry
+  registry-password: base64encodedsecret
   # firebase
   firebase-secret: base64encodedsecret
   # slack
