--- a/docs/examples/github/deployments/app.yaml
+++ b/docs/examples/github/deployments/app.yaml
@@ -1,5 +1,5 @@
-kind: "ReplicationController"
-apiVersion: "v1"
+kind: "Deployment"
+apiVersion: "extensions/v1beta1"
 metadata:
   name: "myapp"
   labels:
@@ -7,7 +7,8 @@ metadata:
 spec:
   replicas: 3
   selector:
-    app: "myapp"
+    matchLabels:
+      app: "myapp"
   template:
     metadata:
       labels:
@@ -23,4 +24,4 @@ spec:
             - name: "KEY1"
               value: "VALUE"
             - name: "KEY2"
-              value: "{VARIABLE}"
+              value: "VALUE"
