--- a/package.json
+++ b/package.json
@@ -21,13 +21,14 @@
     "human-size": "1.1.0",
     "moment": "2.17.1",
     "moment-duration-format": "1.3.0",
-    "react": "15.5.4",
-    "react-bootstrap": "0.30.7",
+    "prop-types": "15.5.10",
+    "react": "15.6.0",
+    "react-bootstrap": "0.31.0",
     "react-bootstrap-typeahead": "0.8.4",
     "react-dom": "15.5.4",
     "react-redux": "4.4.5",
-    "react-router": "2.5.1",
-    "react-router-redux": "4.0.6",
+    "react-router": "3.0.5",
+    "react-router-redux": "4.0.8",
     "redux": "3.3.1",
     "redux-thunk": "2.1.0",
     "redux-ui": "0.0.15",
