--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,29 +3,42 @@ version: 2
 jobs:
   go:
     docker:
-      - image: golang:1.9.1-alpine3.6
+      - image: circleci/golang:1.8
+    working_directory: /go/src/github.com/airware/vili
     steps:
       - checkout
       - run:
           name: Build
           command: |
-            CGO_ENABLED=0 go build -a -installsuffix cgo -ldflags '-s' -o main
+            go build -a
   js:
     docker:
-      - image: node:8.7.0-alpine
+      - image: circleci/node:7
     steps:
       - checkout
+      - restore_cache:
+          keys:
+            # Find a cache corresponding to this specific package.json checksum
+            # when this file is changed, this key will fail
+            - npm-deps-{{ checksum "package.json" }}
+            # Find the most recent cache used from any branch
+            - npm-deps
+      - run:
+          name: Install dependencies
+          command: |
+            npm install
+      - save_cache:
+          key: npm-deps-{{ checksum "package.json" }}
+          paths:
+            - node_modules
       - run:
           name: Build
           command: |
-            npm install
             npm run build
+
   release:
     docker:
-      - image: 1
-    branches:
-      only:
-        - master
+      - image: circleci/python:3
     steps:
       - checkout
       - setup_remote_docker
@@ -44,6 +57,10 @@ workflows:
       - go
       - js
       - release:
+          filters:
+            branches:
+              only:
+                - master
           requires:
             - go
             - js
