--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,13 +41,14 @@ jobs:
       - image: circleci/python:3
     steps:
       - checkout
-      - setup_remote_docker
+      - setup_remote_docker:
+          version: 17.07.0-ce
       - run:
           name: Docker build and publish
           command: |
             image=quay.io/airware/vili:$(date +%s)-$(echo $CIRCLE_SHA1 | cut -c 1-7)
             docker login --username "$QUAY_USER" --password "$QUAY_PASS" quay.io
-            docker build --tag $image
+            docker build --tag $image .
             docker push $image
 
 workflows:
