--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,7 @@
 {
-  "extends": ["standard", "standard-react"],
+  "extends": ["pretty-standard"],
   "parser": "babel-eslint",
-  "plugins": ["react", "import"],
+  "plugins": ["react", "import", "prettier"],
   "rules": {
     "import/no-unresolved": ["error"],
     "import/named": ["error"],
