--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "browser-request": "0.3.3",
     "human-size": "1.1.0",
+    "immutable": "3.8.1",
     "moment": "2.22.1",
     "moment-duration-format": "2.2.2",
     "prop-types": "15.6.1",
@@ -54,9 +55,9 @@
     "css-loader": "0.28.11",
     "enzyme": "3.3.0",
     "eslint": "4.19.1",
-    "eslint-config-standard": "11.0.0",
-    "eslint-config-standard-react": "6.0.0",
+    "eslint-config-pretty-standard": "1.1.0",
     "eslint-plugin-import": "2.11.0",
+    "eslint-plugin-prettier": "2.3.1",
     "eslint-plugin-promise": "3.7.0",
     "eslint-plugin-react": "7.7.0",
     "eslint-plugin-standard": "3.1.0",
@@ -69,6 +70,7 @@
     "node-notifier": "5.2.1",
     "null-loader": "0.1.1",
     "postcss-loader": "2.1.4",
+    "prettier": "1.9.1",
     "raw-loader": "0.5.1",
     "rimraf": "2.6.2",
     "snazzy": "7.1.1",
@@ -76,6 +78,8 @@
     "standard-reporter": "1.0.5",
     "style-loader": "0.21.0",
     "url-loader": "1.0.1",
-    "webpack": "4.6.0"
+    "webpack": "4.6.0",
+    "webpack-cli": "2.0.15",
+    "webpack-fail-plugin": "2.0.0"
   }
 }
