--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ jobs:
   go:
     docker:
       - image: circleci/golang:1.10
-    working_directory: /go/src/github.com/airware/vili
+    working_directory: /go/src/github.com/viliproject/vili
     steps:
       - checkout
       - run:
@@ -50,7 +50,7 @@ jobs:
       - run:
           name: Docker build and publish
           command: |
-            image=quay.io/airware/vili:$(date +%s)-$(echo $CIRCLE_SHA1 | cut -c 1-7)
+            image=quay.io/viliproject/vili:$(date +%s)-$(echo $CIRCLE_SHA1 | cut -c 1-7)
             docker login --username "$QUAY_USER" --password "$QUAY_PASS" quay.io
             docker build --tag $image .
             docker push $image
